<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:padding="3dp"
                    android:text="@string/firstname_represent"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/firstname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/lastname_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:padding="3dp"
                    android:text="@string/lastname_represent"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/lastname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:padding="3dp"
                    android:text="@string/email_represent"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/faculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:padding="3dp"
                    android:text="@string/faculty_represent"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="10dp"
                    android:scrollbarSize="20dp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:padding="3dp"
                    android:text="@string/username_represent"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:padding="3dp"
                    android:text="@string/password_represent"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/text1"
                    android:fontFamily="@font/opunregular"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/choice1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectChocie"
                        android:text="@string/choice1" />

                    <RadioButton
                        android:id="@+id/choice2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectChocie"
                        android:text="@string/choice2" />

                    <RadioButton
                        android:id="@+id/choice3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectChocie"
                        android:text="@string/choice3" />

                    <RadioButton
                        android:id="@+id/choice4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="selectChocie"
                        android:text="@string/choice4" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/info"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:onClick="showInfo"
                        app:srcCompat="@drawable/ic_info" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sendData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_green_corner"
                android:fontFamily="@font/opunregular"
                android:onClick="addUser"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>