<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp_Dorm_Owner">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dorm_owner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/dormOwner"
                android:fontFamily="@font/opunregular"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/dorm_owner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/dormName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/Name_Dorm" />

                <EditText
                    android:id="@+id/name_dorm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dormOwner_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/Name_Dorm_Owner" />

                <EditText
                    android:id="@+id/name_dorm_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dormOwner_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/Lastname_Dorm_Owner" />

                <EditText
                    android:id="@+id/lastname_dorm_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/Contact_Dorm_Owner" />

                <EditText
                    android:id="@+id/phone_dorm_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/Email_Dorm_Owner" />

                <EditText
                    android:id="@+id/email_dorm_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/username_Dorm_Owner" />

                <EditText
                    android:id="@+id/username_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/password_Dorm_Owner" />

                <EditText
                    android:id="@+id/password_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/document_title"
                android:textColor="@android:color/black"
                android:fontFamily="@font/opunregular"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/part_document"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:text="@string/upload_document" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/uploadDocument"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@null"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/add" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/cancel_button"
                    android:onClick="chooseRole"
                    android:text="@string/cancel"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/addDorm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/insert_location_dorm"
                    android:onClick="addDetailDorm"
                    android:text="@string/insert_dormLocation"
                    android:padding="3dp"
                    android:fontFamily="@font/opunregular"
                    android:textSize="13sp"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>